syntax = "proto3";

package api;

service Adder {
  rpc Add(AddRequest) returns (AddResponse) {

  }
}

message AddRequest {
  bytes image = 1;
  
}

message AddResponse {
  bytes imageResult = 1;
}